# genlm-control

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: docs-preview.yml  docs.yml  pytest.yml  ruff.yml
docs/: index.md  performance.md  potentials.md  samplers.md
docs/javascripts/: mathjax.js
examples/: getting_started.ipynb  getting_started.py  performance.ipynb  start_here.ipynb
genlm/control/potential/: autobatch.py  base.py  coerce.py  multi_proc.py  operators.py  product.py
genlm/control/potential/built_in/: canonical.py  llm.py
genlm_control/: __init__.py  constant.py  engine.py  models.py  operators.py  product.py  token_sampler.py  tracer.py  typing.py  util.py  viz.py
genlm_control/experimental/: subtoken.py
genlm_control/potential/: __init__.py  autobatch.py  base.py  coerce.py  lifted.py  mp.py  multi_proc.py  operators.py  product.py  testing.py
genlm_control/potential/built_in/: __init__.py  json.py  llm.py  pylsp.py  wcfg.py  wfsa.py
genlm_control/sampler/: __init__.py  sequence.py  set.py  set_sampler.py  token.py
getting_started/: index.html
performance/: index.html
potentials/: index.html
reference/SUMMARY/: index.html
reference/genlm/control/__init__/: index.html
reference/genlm/control/constant/: index.html
reference/genlm/control/potential/__init__/: index.html
reference/genlm/control/potential/autobatch/: index.html
reference/genlm/control/potential/base/: index.html
reference/genlm/control/potential/built_in/__init__/: index.html
reference/genlm/control/potential/built_in/canonical/: index.html
reference/genlm/control/potential/built_in/json/: index.html
reference/genlm/control/potential/built_in/llm/: index.html
reference/genlm/control/potential/built_in/wcfg/: index.html
reference/genlm/control/potential/built_in/wfsa/: index.html
reference/genlm/control/potential/coerce/: index.html
reference/genlm/control/potential/multi_proc/: index.html
reference/genlm/control/potential/operators/: index.html
reference/genlm/control/potential/product/: index.html
reference/genlm/control/potential/testing/: index.html
reference/genlm/control/sampler/__init__/: index.html
reference/genlm/control/sampler/sequence/: index.html
reference/genlm/control/sampler/set/: index.html
reference/genlm/control/sampler/token/: index.html
reference/genlm/control/typing/: index.html
reference/genlm/control/util/: index.html
reference/genlm/control/viz/: index.html
samplers/: index.html
search/: search_index.json
tests/: conftest.py  test_engine.py  test_models.py  test_operators.py  test_product.py  test_token.py  test_typing.py  test_util.py  test_viz.py
tests/experimental/: test_subtoken.py
tests/potential/: test_autobatch.py  test_base.py  test_coerce.py  test_json.py  test_lift.py  test_llm.py  test_mp.py  test_operators.py  test_product.py  test_wcfg.py  test_wfsa.py
tests/sampler/: conftest.py  test_seq_sampler.py  test_set_sampler.py  test_token.py
