[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genlm-control"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "The GenLM Team" },
]
dependencies = [
    "genlm_grammar @ git+https://github.com/chi-collective/genlm-grammar",
    "genlm-backend>=0.0.1",
    #"hfppl @ git+https://github.com/probcomp/hfppl",
    "arsenal @ git+https://github.com/timvieira/arsenal",
    "IPython",
    "numpy",
    "torch",
    "python-lsp-server",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark",
    "pytest-asyncio",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]
