[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genlm-control"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ben LeBrun", email = "benlebrun1@gmail.com" },
    { name = "The GenLM Team" },
]
dependencies = [
    "genlm_grammar @ git+https://github.com/chi-collective/genlm-grammar.git",
    "genlm-backend>=0.0.1",
    "hfppl @ git+https://github.com/probcomp/hfppl.git",
    "arsenal @ git+https://github.com/timvieira/arsenal",
    "IPython",
    "numpy",
    "torch",
    "python-lsp-server",
    "json-stream",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-benchmark",
    "pytest-asyncio",
    "pytest-timeout",
    "hypothesis",
    "hypothesis-jsonschema",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[tool.setuptools]
packages = [
    "genlm_control",
    "genlm_control.experimental",
    "genlm_control.potential",
    "genlm_control.potential.built_in",
    "genlm_control.sampler",
]
package-data = { "genlm_control" = ["html/*"] }
